# cgo-gen

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md
docs/: README.ja.md  README.ko.md  README.md  README.zh.md
examples/01-c-library/: README.md  config.yaml
examples/02-cpp-class/: README.md
examples/03-cpp-inventory/: README.md
examples/04-go-module/: README.md  config.yaml
examples/05-headers-list/: README.md  config.yaml
examples/06-owner-return/: README.md  config.yaml
examples/07-enums/: README.md
examples/08-overloading/: README.md  config.yaml
examples/09-struct-fields/: README.md
examples/10-strings/: README.md
examples/11-static-shared-library/: README.md  build-libs.sh  config.yaml
examples/_scripts/: link_example_workspace.py
examples/simple-go-struct/: .gitignore  Makefile  README.md  SYMLINKED_BUILD.md  config.yaml  go.mod
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: cli.rs  config.rs  diagnostics.rs  lib.rs  main.rs
src/analysis/: mod.rs  (+1 more)
tests/: abstract_class_skip.rs  compile_smoke.rs  config.rs  dir_only_generate.rs  example_cpp_inventory.rs  example_simple_go_struct.rs  examples_generated_output.rs  facade_generate.rs  facade_only_generation.rs  function_pointer_skip.rs  gen_model_config.rs  generator.rs  model_out_params.rs  model_record_fixture.rs  multi_header_generate.rs  overload_collisions.rs  pipeline.rs  timeval_support.rs  tu_based_parsing.rs  typedef_alias_resolution.rs
(+60 files in other folders)
