[package]
name = "cgo-gen"
version = "0.1.0"
edition = "2024"
description = "Generate C ABI wrappers from a conservative subset of C++ APIs for downstream c-for-go consumption"
license = "MIT"

[dependencies]
anyhow = "1.0"
clang-sys = { version = "1.8", features = ["clang_18_0"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.15"
